Role based authentication complete

--- a/FrontEnd/add-cug.html
+++ b/FrontEnd/add-cug.html
@@ -89,10 +89,9 @@
 		<main id="main">
 			<h2 class="heading">ALLOTMENT OF NEW CUG</h2>
 			<form
-				class="from_contener"
+				class="form_container"
 				action=""
 				method="post"
-				class="content"
 			>
 				<div class="input_box long-input">
 					<label for="name">Name</label>
@@ -322,7 +321,7 @@
 					</div>
 				</section>
 				<button
-					class="activate_button"
+					class="submit-button"
 					type="submit"
 				>
 					Activate
