--- a/FrontEnd/admin-page.html
+++ b/FrontEnd/admin-page.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>East Coast Railway CUG Admin Page</title>
+		<title>ECoR CUG Admin Page</title>
 		<link
 			rel="stylesheet"
 			href="base.css"
