--- a/FrontEnd/create-dealer.html
+++ b/FrontEnd/create-dealer.html
@@ -34,7 +34,7 @@
 				<h2>Create Dealer</h2>
 				<form
 					class="form_container"
-					action="#"
+					action="create-dealer.php"
 					method="post"
 				>
 					<div class="input_box long-input">
