./ removed from php path

--- a/FrontBack/admin-page.html
+++ b/FrontBack/admin-page.html
@@ -24,7 +24,7 @@
             <h2>Admin Services</h2>
             <div class="services-container">
                 <div class="service">
-                    <a href="./create-dealer.php">
+                    <a href="create-dealer.php">
                         <img
                             src="icons/create_dealer.png"
                             alt="Create Dealer"
