files modified and upload bill implemented

--- a/FrontBack/admin-page.html
+++ b/FrontBack/admin-page.html
@@ -35,7 +35,7 @@
 				<div class="service">
 					<a href="./create-dealer.php">
 						<img
-							src="icons/create_dealer.png"
+							src="icon/create_dealer.webp"
 							alt="Create Dealer"
 						/>
 						<h3>Create Dealer</h3>
@@ -45,7 +45,7 @@
 				<div class="service">
 					<a href="cug-details.php">
 						<img
-							src="icons/cug_details.png"
+							src="icon/cug_details.webp"
 							alt="CUG Details"
 						/>
 						<h3>CUG Details</h3>
@@ -58,7 +58,7 @@
 				<div class="service">
 					<a href="./add-cug.php">
 						<img
-							src="icons/add_cug1.png"
+							src="icon/add_cug1.webp"
 							alt="Add New CUG"
 						/>
 						<h3>Add New CUG</h3>
@@ -68,7 +68,7 @@
 				<div class="service">
 					<a href="allotment-history.html">
 						<img
-							src="icons/allotment_history.png"
+							src="icon/allotment_history.webp"
 							alt="Allotment History"
 						/>
 						<h3>Allotment History</h3>
@@ -78,7 +78,7 @@
 				<div class="service">
 					<a href="allocation-report.html">
 						<img
-							src="icons/allocation_report.png"
+							src="icon/allocation_report.webp"
 							alt="Allocation-Wise Report"
 						/>
 						<h3>Allocation-Wise Report</h3>
@@ -88,7 +88,7 @@
 				<div class="service">
 					<a href="status-report.html">
 						<img
-							src="icons/status_report.png"
+							src="icon/status_report.webp"
 							alt="CUG Status Report"
 						/>
 						<h3>CUG Status Report</h3>
@@ -98,7 +98,7 @@
 				<!-- <div class="service">
 					<a href="active-deactive-report.html">
 						<img
-							src="icons/active_deactive_report.png"
+							src="icon/active_deactive_report.webp"
 							alt="Active / De-Active Report"
 						/>
 						<h3>Active / De-Active Report</h3>
@@ -110,7 +110,7 @@
 				<div class="service">
 					<a href="upload-bill.php">
 						<img
-							src="icons/upload_bill2.png"
+							src="icon/upload_bill2.webp"
 							alt="Upload CUG Bill"
 						/>
 						<h3>Upload CUG Bill</h3>
@@ -120,7 +120,7 @@
 				<div class="service">
 					<a href="upload-numbers.php">
 						<img
-							src="icons/upload_numbers.png"
+							src="icon/upload_numbers.webp"
 							alt="Upload New CUG Nos"
 						/>
 						<h3>Upload New CUG Nos</h3>
