--- a/FrontBack/index.html
+++ b/FrontBack/index.html
@@ -85,42 +85,42 @@
       <h2>Our Services</h2>
       <div class="services-container">
         <div class="service">
-          <img src="icons/secure_messaging.png" alt="Secure Messaging" />
+          <img src="icon/secure_messaging.webp" alt="Secure Messaging" />
           <h3>Secure Messaging</h3>
           <p>Send and receive messages securely within the CUG network.</p>
         </div>
         <div class="service">
-          <img src="icons/voice_communication.png" alt="Voice Communication" />
+          <img src="icon/voice_communication.webp" alt="Voice Communication" />
           <h3>Voice Communication</h3>
           <p>Conduct voice calls with other members of the CUG.</p>
         </div>
         <div class="service">
-          <img src="icons/group_calls3.png" alt="Group Calls" />
+          <img src="icon/group_calls3.webp" alt="Group Calls" />
           <h3>Group Calls</h3>
           <p>Initiate group calls for team discussions and meetings.</p>
         </div>
         <div class="service">
-          <img src="icons/file_sharing.png" alt="File Sharing" />
+          <img src="icon/file_sharing.webp" alt="File Sharing" />
           <h3>File Sharing</h3>
           <p>Share files securely within the CUG network.</p>
         </div>
         <div class="service">
-          <img src="icons/event_scheduling.png" alt="Event Scheduling" />
+          <img src="icon/event_scheduling.webp" alt="Event Scheduling" />
           <h3>Event Scheduling</h3>
           <p>Schedule events and meetings with ease.</p>
         </div>
         <div class="service">
-          <img src="icons/user_management.png" alt="User Management" />
+          <img src="icon/user_management.webp" alt="User Management" />
           <h3>User Management</h3>
           <p>Manage user profiles and access within the CUG.</p>
         </div>
         <div class="service">
-          <img src="icons/emergency_alerts.png" alt="Emergency Alerts" />
+          <img src="icon/emergency_alerts.webp" alt="Emergency Alerts" />
           <h3>Emergency Alerts</h3>
           <p>Receive and send emergency alerts promptly.</p>
         </div>
         <div class="service">
-          <img src="icons/location_tracking.png" alt="Location Tracking" />
+          <img src="icon/location_tracking.webp" alt="Location Tracking" />
           <h3>Location Tracking</h3>
           <p>Track the location of CUG members for coordination.</p>
         </div>
@@ -130,9 +130,9 @@
     <section id="gallery">
       <h2>Gallery</h2>
       <div class="gallery">
-        <img src="images/photo1.jpg" alt="Photo 1" />
-        <img src="images/photo2.jpg" alt="Photo 2" />
-        <img src="images/photo3.jpg" alt="Photo 3" />
+        <img src="images/photo1.webp" alt="Photo 1" />
+        <img src="images/photo2.webp" alt="Photo 2" />
+        <img src="images/photo3.webp" alt="Photo 3" />
       </div>
     </section>
 
