--- a/FrontBack/dealer-page.html
+++ b/FrontBack/dealer-page.html
@@ -47,7 +47,7 @@
 					<div class="service">
 						<a href="add-cug.php">
 							<img
-								src="icons/add_cug1.png"
+								src="icon/add_cug1.webp"
 								alt="Add New CUG"
 							/>
 							<h3>Add New CUG</h3>
@@ -57,7 +57,7 @@
 					<div class="service">
 						<a href="deactivate-cug.php">
 							<img
-								src="icons/de-activate_cug.png"
+								src="icon/de-activate_cug.webp"
 								alt="De-Active CUG"
 							/>
 							<h3>De-Active CUG</h3>
@@ -67,7 +67,7 @@
 					<div class="service">
 						<a href="allocation-report.html">
 							<img
-								src="icons/allocation_report.png"
+								src="icon/allocation_report.webp"
 								alt="Allocation-Wise Report"
 							/>
 							<h3>Allocation-Wise Report</h3>
@@ -77,7 +77,7 @@
 					<div class="service">
 						<a href="plan-wise-billing.html">
 							<img
-								src="icons/plan-wise_billing.png"
+								src="icon/plan-wise_billing.webp"
 								alt="Plan-Wise Billing Report"
 							/>
 							<h3>Plan-Wise Billing Report</h3>
