--- a/FrontBack/admin-page.html
+++ b/FrontBack/admin-page.html
@@ -8,6 +8,11 @@
 		/>
 		<title>ECoR CUG Admin Page</title>
 		<link
+			rel="icon"
+			type="image/webp"
+			href="logo.webp"
+		/>
+		<link
 			rel="stylesheet"
 			href="base.css"
 		/>
@@ -19,8 +24,10 @@
 	<body>
 		<header>
 			<div class="header-top">
-				<h1>East Coast Railway</h1>
-				<h1>Closed User Group</h1>
+				<a href="./">
+					<h1>East Coast Railway</h1>
+					<h1>Closed User Group</h1>
+				</a>
 			</div>
 			<!-- <nav>
             <ul>
@@ -76,7 +83,7 @@
 					</a>
 				</div>
 				<div class="service">
-					<a href="allocation-report.html">
+					<a href="allocation-report.php">
 						<img
 							src="icon/allocation_report.webp"
 							alt="Allocation-Wise Report"
