--- a/FrontBack/dealer-page.html
+++ b/FrontBack/dealer-page.html
@@ -8,6 +8,11 @@
 		/>
 		<title>East Coast Railway CUG Dealer Page</title>
 		<link
+			rel="icon"
+			type="image/webp"
+			href="logo.webp"
+		/>
+		<link
 			rel="stylesheet"
 			href="base.css"
 		/>
@@ -36,8 +41,10 @@
 		<div class="content">
 			<header>
 				<div class="header-top">
-					<h1>East Coast Railway</h1>
-					<h1>Closed User Group</h1>
+					<a href="./">
+						<h1>East Coast Railway</h1>
+						<h1>Closed User Group</h1>
+					</a>
 				</div>
 			</header>
 
@@ -65,7 +72,7 @@
 						</a>
 					</div>
 					<div class="service">
-						<a href="allocation-report.html">
+						<a href="allocation-report.php">
 							<img
 								src="icon/allocation_report.webp"
 								alt="Allocation-Wise Report"
